# eduplatform

./: API.md  AUTHENTICATION_IMPLEMENTATION.md  CMakeLists.txt  CODE_REFERENCE.md  CONFIGURATION.md  DEVELOPMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TEST_ENDPOINTS.md  api.js  app.js  auth.h  build.bat  build_direct.bat  build_final.bat  courses.db  db_utils.h  download_libmicrohttpd.ps1  download_sqlite.ps1  index.html  json_utils.h  schema.sql  server.c  server_simple.c  setup_deps.bat  setup_vs2019.bat  styles.css
